View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0022543 | Open CASCADE | OCCT:DRAW | public | 2011-05-27 19:31 | 2012-03-29 17:26 |
Reporter | imv | Assigned To | bugmaster | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
OS | Linux | ||||
Target Version | 6.5.3 | Fixed in Version | 6.5.3 | ||
Summary | 0022543: Attempt to fix some errors reported by valgrind at Draw execution | ||||
Description | Valgrind reports lot of "Invalid free() / delete / delete[]" errors. The attachment contains attempt of fix such errors in Draw and OpenGl. | ||||
Tags | No tags attached. | ||||
Test case number | Test case is not required | ||||
2011-05-27 17:31
|
src.tgz (16,973 bytes) |
2011-06-03 15:56
|
src_1.tgz (64,078 bytes) |
|
Added delete for a_string in src/Draw/Draw_Interpretor.cxx Other errors has been fixed in context of another bugfixes. Mostly in 0022819 Git branch CR22543 is ready to be reviewed. Dear Andrey, Please review. |
|
No remarks, please test |
|
Dear BugMaster, Workbench KAS:dev:apn-22543-occt was created from git branch CR22543 (and apn-22543-products from svn trunk) and compiled on Linux platform. There are not regressions in apn-22543-products regarding to KAS:dev:products-20120316-opt See results in /QADisk/occttests/results/KAS/dev/apn-22543-products_16032012/lin See reference results in /QADisk/occttests/results/KAS/dev/products-20120316-opt_17032012/lin See test cases in /QADisk/occttests/tests/ED |
|
Integrated into master |
Date Modified | Username | Field | Change |
---|---|---|---|
2011-09-13 14:06 | bugmaster | Assigned To | bugmaster => imv |
2011-09-13 14:06 | bugmaster | Status | new => assigned |
2011-09-13 14:06 | bugmaster | Status | assigned => resolved |
2012-02-21 12:45 | imv | Assigned To | imv => mkv |
2012-02-21 12:45 | imv | Status | resolved => assigned |
2012-02-21 12:45 | imv | Fixed in Version | EMPTY => |
2012-02-21 12:45 | imv | Description Updated | |
2012-02-21 13:40 |
|
Assigned To | mkv => dbv |
2012-03-16 18:15 |
|
Note Added: 0020026 | |
2012-03-16 18:15 |
|
Assigned To | dbv => abv |
2012-03-16 18:15 |
|
Status | assigned => resolved |
2012-03-16 18:58 |
|
Note Added: 0020028 | |
2012-03-16 18:58 |
|
Assigned To | abv => dbv |
2012-03-16 18:58 |
|
Status | resolved => reviewed |
2012-03-16 19:07 |
|
Assigned To | dbv => apn |
2012-03-19 11:50 | apn | Note Added: 0020037 | |
2012-03-19 11:51 | apn | Test case number | => Test case is not required |
2012-03-19 11:51 | apn | Assigned To | apn => bugmaster |
2012-03-19 11:51 | apn | Status | reviewed => tested |
2012-03-21 17:30 | bugmaster | Note Added: 0020071 | |
2012-03-21 17:30 | bugmaster | Status | tested => verified |
2012-03-21 17:30 | bugmaster | Resolution | open => fixed |
2012-03-21 17:31 | bugmaster | Assigned To | bugmaster => imv |
2012-03-21 17:31 | bugmaster | Target Version | => 6.5.3 |
2012-03-29 17:26 | bugmaster | Changeset attached | => occt master 938a360f |