0022543: Attempt to fix some errors reported by valgrind at Draw execution

Changes:
Added delete for a_string in src/Draw/Draw_Interpretor.cxx